[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
linked_hash_set = "0.1.4"
regex = "1.7.0"
